# rag-style-check

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  DOCKER.md  Dockerfile  Makefile  README.md  build.sh  cloudbuild.yml  docker-compose.dev.example.yml  docker-compose.yml  full_style_guide.md  newslabs_rag_style_check.code-workspace  plan  pyproject.toml  requirements.txt  run_server.py
.github/: copilot-instructions.md
docs/architecture/: two_stage_audit_plan.md
frontend/: REFACTORING_SUMMARY.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  schemas.ts  theme.ts  types.ts
frontend/src/lib/components/forms/: ViolationCard.svelte  index.ts  (+3 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/tests/: +page.svelte  +page.svelte.backup
scripts/: init_db.py  run_docker_local.sh  verify_counts.py
src/: __init__.py  agent_audit.py  audit.py  audit_common_inclusion.py  config.py  ingest.py  retrieval_test.py  server.py  utils.py  vertex_rerank.py
src/api/: __init__.py  schemas.py  server.py  test_schemas.py
src/audit/: agent.py  auditor.py  helpers.py  models.py  prompts.py  rerankers.py  retrievers.py  tag_matcher.py
src/auditor/: __init__.py  auditor.py
src/core/: __init__.py  alternative_auditor.py  auditor.py  auditor_configurable.py  db.py  prompts.py  test_generator.py  test_manager.py
src/core/models/: base.py  log.py  tests.py
src/data/: __init__.py  create_audit_logs_table.py  create_test_tables.py  db.py  ingest.py  setup_tsvector.py
src/data/models/: __init__.py  base.py  log.py  rules.py  test_case.py  tests.py
src/evaluation/: test_generator.py  test_manager.py
src/legacy/: __init__.py  build_prompts.py  prompts.py
style_guide_auditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: generate_common_tests.py  generate_complex_tests.py  generate_tests.py  generated_tests.json  generated_tests_common.json  generated_tests_complex.json  run_tests.py
(+38 files in other folders)
